--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <div style="text-align: center; max-width: 500px; margin: 4rem auto">
-    <div mb-4>
+    <div class="mb-4">
       <h4>Change Info</h4>
     </div>
     <form action="{% url 'accountapp:update' pk=user.pk %}" method="post">
