--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,10 @@
            <span>nav3</span>
            {% if not user.is_authenticated %}
            <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
-           <span>Login</span>
+                <span>Login</span>
+           </a>
+           <a href="{% url 'accountapp:create' %}">
+                <span>SignUp</span>
            </a>
            {% else %}
            <a href="{% url 'accountapp:detail' pk=user.pk %}">
