--- a/static/base.css
+++ b/static/base.css
@@ -19,3 +19,21 @@
         font-size: 13px;
     }
 }
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+.prgmatic_header_nav {
+    margin: 0rem 0.5rem;
+    color: black;
+}
+
+.prgmatic_header_navbar {
+    margin: 1rem 0;
+}
