--- a/templates/head.html
+++ b/templates/head.html
@@ -17,6 +17,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
 
+    <!--  GOOGLE MATERIAL ICONS  -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
+
     <!--  DEFAULT CSS LINK  -->
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
