--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -33,7 +33,7 @@
   {% if article_list %}
   <div class="container">
     {% for article in article_list %}
-    <a href="{% url 'articleapp:detail' pk=article.pk">
+    <a href="{% url 'articleapp:detail' pk=article.pk %}">
       {% include 'snippets/card.html' with article=article %}
     </a>
     {% endfor %}
